kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-react-app
  labels:
    app: simple-react-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-react-app
  template:
    metadata:
      labels:
        app: simple-react-app
    spec:
      containers:
      - name: simple-react-app
        image: ghcr.io/hellorahulsingh/react-demo:sha-7a7901fb81ed1fde04b316600a22bfe10cd5a74b
        # Image will be automatically updated by CI/CD pipeline
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
      - name: github-container-registry
